# dotfiles

./: .Xresources  .dotFileSetup.sh  .dwmSession.sh  .emacs  .envars  .gitignore  .gitmodules  .spacemacs  .tmux.conf  .vimrc  .xinitrc  .xprofile  .zshrc  README.md  README.org  apply.py  config.yaml  initFolders.sh  lc  setup.sh  shell.nix  stows  xinitrc_sample
.colors/: 5  colory  contrast_need
.i3/: config
2bwm/: .xinitrc
Conky/: conkymain  getInternalIp.sh  spotify-nowplaying-length  spotify-nowplaying.sh  start.sh
Scripts/: #wiki2P.py#  InstallPpaPackage.sh  JUUPPA.py  autoStart.sh  checkIfActive.sh  installSouceCodePro.sh  mayHem.py  mountFstab.sh  openInRanger.sh  overleafUp.sh  pacman  pythonSocket.py  rofi  setUpeveryThing  start2bwm  virtualWifi.conf  volume-change.py  whileUdDown.sh  wiki2P.py  wiki2P.py.save
apply/: __main__.py  apply.py  apply_cmd.py  remove_cmd.py  resolv.py  state.py  status_cmd.py  writer.py
bspwm/: #pre_stow.sh#  .Xmodmap  .launchxvm  .xinitrc
dwm/: #pre_stow.sh#  .dwmSession.sh  .launchxvm  .xinitrc  lc
emacs/: .emacs
email/: #pre_stow.sh#  .mailcap  .mbsyncrc  .msmtprc  .notmuch-config
fish/: #pre_stow.sh#
i3/: .i3status.conf  .xinitrc
mixed/: .Xresources  .tigrc
qtile/: #pre_stow.sh#
qutebrowser/: #pre_stow.sh#  #setup.sh#
scripts/: #pre_stow.sh#
scripts/resc/setwall/: Cargo.toml
scripts/resc/setwall/src/: main.rs
vim/: .vimrc
vim-core/: #pre_stow.sh#
wayland/: winitrc
xinit/: .Xmodmap  .xbindkeysrc  .xprofile  .xsession
zsh/: .zshrc
zsh-no-omzsh/: .zshrc
zsh-oh-my-zsh/: .zshrc
(+69 files in other folders)
