[package]
name = "setwall"
version = "1.0.0"
edition = "2021"
authors = ["Julian Jørgensen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
rand = "0.8"
dirs = "4"
